internal
    - consolidate envelope reading functions, and make mismatches non-fatal
    - uninitilized variable bugfix
    - AGGRESSIVE_DELIVERY option and behavior added
    - SMTP_RCVBUF directive limits TCP Window size until valid DATA segment
    - Multiple LDAP DBs
    - updated simvacation code
    - Better Data metrics, and max message size checking
    - TARPIT individual stage timings
    - SMTP_MODE config directive
    - LDAP "bad filter" error doesn't stop expansion
    - added FAILED_RCPT_PUNISHMENT to give the TARPIT option
    - SMTP READ_BEFORE_BANNER option added
    - ignore optional Efile entry M
    - content filter can trigger tarpitting
    - f_data() cleaned up
    - SMTP DATA Time Metric
    - SMTP Data timer is for global transaction, not for a line
    - SMTP User not local error message change includes local hostname
    - Change MIN_WORK_TIME default to 300 seconds
    - New Content Fileter environment variable, SIMTA_CHECKSUM_SIZE
    - Content filter checksum now includes all non-failed rcpt to addresses
    - Added simck test program
    - Supressed compiler warnings
    - New queue scheduler timing prefers working to reading
    - Added BLOCK and ACCEPT to RBL syntax for whitelisting
    - Added better penalty box logging
    - bugfix: CTX init function added

0.7.8
    - use file_size variable for correct Receive reporting
    - Non-local fdailed domains count in the receive phase
    - Simta MID unique timestams ensured

0.7.7
    - CA_DIRECTORY directive

0.7.6.5.1
    - simvacation ldap changes

0.7.6.5
    - ldap changes & upgrades

0.7.6.4
    - simta_ld_init()->simta_ldap_init() bugfix

0.7.6.3
    - removed reliance on associatedDomain

0.7.6.2
    - Bugfix for uninitilized variable

0.7.6.1
    - make sure we print the file size
    - simvacation upgrades

0.7.6
    - multiple LDAP databases

0.7.5
    - RED "D" Bugfix

0.7.4
    - LDAP "bad filter" error doesn't stop expansion

0.7.3